--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ h1 {
   height: 13rem;
   border-radius: 70%;
   overflow: hidden;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
   margin-left: 12vw;
   margin-right: 12vw;
 }
