--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import 'Normalize.css';
+@import url('./Normalize.css');
 
 * {
   font-family: 'Noto Sans KR', sans-serif;
@@ -179,6 +179,10 @@ h1 {
   text-align: left;
   margin: 0.4rem;
   padding-bottom: 5rem;
+}
+
+.Bylaw_text {
+  text-indent: 6em;
 }
 
 @media (max-width: 768px) {
